[package]
name = "blueshift_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }

pinocchio = "0.9.0"
pinocchio-associated-token-account = "0.2.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"

thiserror = { version = "2.0.15", default-features = false }
